ajout des controllers et dto's et des tests